# fast-api-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  models.py  pyproject.toml
api/: product_api.py
core/: database.py
frontend/public/: index.html
frontend/src/: App.js  TaglineSection.js
models/: product_model.py
repositories/: product_repository.py
schemas/: product_schema.py
services/: product_service.py
tests/: test_product_api.py
