[project]
name = "fast-api-demo"
version = "0.1.0"
description = "fast-api-demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
